# heracomm-invoice-analyzer

./: .gitignore  .~lock.bollette_hera_riepilogo.csv#  AGENTS.md  Makefile  README.md  analisi_dati_completa.sh  analizza_bollette_hera.py  bollette_hera_riepilogo.csv  bollette_hera_riepilogo_interattivo.html  bollette_hera_riepilogo_processato.csv  full_analysis.sh  pyproject.toml  requirements.txt  step1_analizza_bollette_hera.py  step1_invoice_analyzer.py  step2_crea_grafico.py  step2_interpolate.py  step2_interpolazione.py  step3_crea_grafico.py  step3_create_html_page.py
risultati-interpolati/: AI PROMPT.txt  Dockerfile  consumi_energetici_2024.csv  copy_to_mastermind.sh  docker-compose.yaml  energy_consumption_interpolation.html  nginx.conf
templates/: html_template.j2  html_yearly_template.j2
